--- a/Assignment02/Assignment.Client.HttpClientWeb/Properties/launchSettings.json
+++ b/Assignment02/Assignment.Client.HttpClientWeb/Properties/launchSettings.json
@@ -12,7 +12,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:7107;http://localhost:5107",
+      "applicationUrl": "http://localhost:5107;https://localhost:7107",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
