--- a/Assignment05/Assignment.MasaEntityFramework/Assignment.MasaEntityFramework.csproj
+++ b/Assignment05/Assignment.MasaEntityFramework/Assignment.MasaEntityFramework.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Masa.Contrib.Data.Contracts.EF" Version="0.4.0-rc.4" />
+    <PackageReference Include="Masa.Contrib.Data.EntityFrameworkCore.InMemory" Version="0.4.0-rc.4" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
     <PackageReference Include="Masa.Contrib.Data.EntityFrameworkCore" Version="0.4.0-rc.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="6.0.5" />
