--- a/Assignment11/Assignment.InProcessEventBus/Assignment.InProcessEventBus.csproj
+++ b/Assignment11/Assignment.InProcessEventBus/Assignment.InProcessEventBus.csproj
@@ -7,8 +7,8 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Masa.Contrib.BasicAbility.Dcc" Version="0.5.0-preview.1" />
-      <PackageReference Include="Masa.Contrib.Configuration" Version="0.5.0-preview.1" />
+      <PackageReference Include="FluentValidation.AspNetCore" Version="11.1.0" />
+      <PackageReference Include="Masa.Contrib.Dispatcher.Events" Version="0.5.0-preview.2" />
     </ItemGroup>
 
 </Project>
