--- a/Assignment11/Assignment.InProcessEventBus/Properties/launchSettings.json
+++ b/Assignment11/Assignment.InProcessEventBus/Properties/launchSettings.json
@@ -3,16 +3,16 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:52182",
-      "sslPort": 44378
+      "applicationUrl": "http://localhost:57369",
+      "sslPort": 44386
     }
   },
   "profiles": {
-    "Assignment.Server": {
+    "Assignment.InProcessEventBus": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:7237;http://localhost:5237",
+      "applicationUrl": "https://localhost:7262;http://localhost:5262",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
