--- a/Assignment12/Assignment.IntegrationEventBus/Assignment.IntegrationEventBus.csproj
+++ b/Assignment12/Assignment.IntegrationEventBus/Assignment.IntegrationEventBus.csproj
@@ -7,11 +7,11 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Masa.Contrib.Data.EntityFrameworkCore.Sqlite" Version="0.5.0-preview.4" />
-      <PackageReference Include="Masa.Contrib.Data.UoW.EF" Version="0.5.0-preview.4" />
-      <PackageReference Include="Masa.Contrib.Dispatcher.IntegrationEvents.Dapr" Version="0.5.0-preview.4" />
-      <PackageReference Include="Masa.Contrib.Dispatcher.IntegrationEvents.EventLogs.EF" Version="0.5.0-preview.4" />
-      <PackageReference Include="Masa.Utils.Development.Dapr.AspNetCore" Version="0.5.0-preview.4" />
+      <PackageReference Include="Masa.Contrib.Data.EntityFrameworkCore.Sqlite" Version="0.5.0-rc.2" />
+      <PackageReference Include="Masa.Contrib.Data.UoW.EF" Version="0.5.0-rc.2" />
+      <PackageReference Include="Masa.Contrib.Dispatcher.IntegrationEvents.Dapr" Version="0.5.0-rc.2" />
+      <PackageReference Include="Masa.Contrib.Dispatcher.IntegrationEvents.EventLogs.EF" Version="0.5.0-rc.2" />
+      <PackageReference Include="Masa.Utils.Development.Dapr.AspNetCore" Version="0.5.0-rc.2" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.6">
         <PrivateAssets>all</PrivateAssets>
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
