chore: update version

--- a/Assignment08/Assignment.MasaConfiguration/appsettings.json
+++ b/Assignment08/Assignment.MasaConfiguration/appsettings.json
@@ -10,5 +10,35 @@
       "DefaultConnection": "server=localhost;uid=sa;pwd=P@ssw0rd;database=identity"
     }
   },
+//  "DccOptions": {
+//    "ManageServiceAddress ": "http://localhost:8890",
+//    "RedisOptions": {
+//      "Servers": [
+//        {
+//          "Host": "localhost",
+//          "Port": 8889
+//        }
+//      ],
+//      "DefaultDatabase": 0,
+//      "Password": ""
+//    },
+//    "AppId": "Replace-With-Your-AppId",
+//    "Environment": "Development",
+//    "Secret": "",
+//    "Cluster": "Default",
+//    "ExpandSections": [
+//      {
+//        "AppId": "Replace-With-Your-AppId",
+//        "Environment": "Development",
+//        "ConfigObjects": [
+//          "Platforms"
+//        ],
+//        "Secret": "",
+//        "Cluster": "Default"
+//      }
+//    ],
+//    "PublicId": "Replace-With-Your-Public-AppId",
+//    "PublicSecret": "Replace-With-Your-Public-AppId-Secret"
+//  },
   "AllowedHosts": "*"
 }
