--- a/Assignment09/Assignment.DistributedLock.Local/Assignment.DistributedLock.Local.csproj
+++ b/Assignment09/Assignment.DistributedLock.Local/Assignment.DistributedLock.Local.csproj
@@ -7,7 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Masa.Contrib.Data.DistributedLocking.Local" Version="0.5.0-preview.4" />
+      <PackageReference Include="Masa.Contrib.Data.DistributedLock.Local" Version="0.6.0-preview.10" />
     </ItemGroup>
 
 </Project>
