--- a/Assignment14/Assignment.MinimalApiDemo/Assignment.MinimalApiDemo.csproj
+++ b/Assignment14/Assignment.MinimalApiDemo/Assignment.MinimalApiDemo.csproj
@@ -7,7 +7,8 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Masa.Contrib.Service.MinimalAPIs" Version="0.5.0-preview.6" />
+      <PackageReference Include="Masa.Contrib.Service.MinimalAPIs" Version="0.6.0-preview.11" />
+      <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
     </ItemGroup>
 
 </Project>
