--- a/Assignment14/Assignment.MinimalApiDemo/Properties/launchSettings.json
+++ b/Assignment14/Assignment.MinimalApiDemo/Properties/launchSettings.json
@@ -13,6 +13,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "applicationUrl": "https://localhost:7060;http://localhost:5060",
+      "launchUrl": "swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
