--- a/Assignment13/Assignment.GlobalExceptionDemo/Assignment.GlobalExceptionDemo.csproj
+++ b/Assignment13/Assignment.GlobalExceptionDemo/Assignment.GlobalExceptionDemo.csproj
@@ -7,8 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="FluentValidation.AspNetCore" Version="11.1.2" />
-    <PackageReference Include="Masa.Utils.Exceptions" Version="0.5.0-preview.5" />
+    <PackageReference Include="Masa.Utils.Exceptions" Version="0.6.0-rc.3" />
   </ItemGroup>
 
 </Project>
