--- a/Assignment15/Assignment.CqrsDemo/Assignment.CqrsDemo.csproj
+++ b/Assignment15/Assignment.CqrsDemo/Assignment.CqrsDemo.csproj
@@ -7,11 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Masa.Contrib.Dispatcher.Events" Version="0.5.0-preview.6" />
-    <PackageReference Include="Masa.Contrib.Dispatcher.IntegrationEvents" Version="0.5.0-preview.7" />
-    <PackageReference Include="Masa.Contrib.Dispatcher.IntegrationEvents.Dapr" Version="0.5.0-preview.7" />
-    <PackageReference Include="Masa.Contrib.ReadWriteSpliting.Cqrs" Version="0.5.0-preview.6" />
-    <PackageReference Include="Masa.Utils.Development.Dapr.AspNetCore" Version="0.5.0-rc.1" />
+    <PackageReference Include="Masa.Contrib.Dispatcher.Events" Version="0.7.0-preview.9" />
+    <PackageReference Include="Masa.Contrib.Dispatcher.IntegrationEvents" Version="0.7.0-preview.9" />
+    <PackageReference Include="Masa.Contrib.Dispatcher.IntegrationEvents.Dapr" Version="0.7.0-preview.9" />
+    <PackageReference Include="Masa.Contrib.ReadWriteSplitting.Cqrs" Version="0.7.0-preview.9" />
+    <PackageReference Include="Masa.Contrib.Development.DaprStarter.AspNetCore" Version="0.7.0-preview.9" />
   </ItemGroup>
 
 </Project>
