--- a/Assignment17/Assignment17.Ordering.API/appsettings.Development.json
+++ b/Assignment17/Assignment17.Ordering.API/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "server=localhost;uid=sa;pwd=P@ssw0rd;database=order"
+    "DefaultConnection": "server=localhost,2000;uid=sa;pwd=P@ssw0rd;database=order"
   }
 }
