--- a/Assignment17/Assignment17.Ordering.API/Assignment17.Ordering.API.csproj
+++ b/Assignment17/Assignment17.Ordering.API/Assignment17.Ordering.API.csproj
@@ -12,13 +12,19 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="FluentValidation.AspNetCore" Version="11.2.2" />
       <PackageReference Include="Masa.BuildingBlocks.Data.UoW" Version="0.7.0-preview.12" />
       <PackageReference Include="Masa.Contrib.Data.UoW.EFCore" Version="0.7.0-preview.12" />
+      <PackageReference Include="Masa.Contrib.Development.DaprStarter.AspNetCore" Version="0.7.0-preview.12" />
       <PackageReference Include="Masa.Contrib.Dispatcher.Events" Version="0.7.0-preview.12" />
       <PackageReference Include="Masa.Contrib.Dispatcher.Events.FluentValidation" Version="0.7.0-preview.12" />
       <PackageReference Include="Masa.Contrib.Dispatcher.IntegrationEvents.Dapr" Version="0.7.0-preview.12" />
       <PackageReference Include="Masa.Contrib.Dispatcher.IntegrationEvents.EventLogs.EFCore" Version="0.7.0-preview.12" />
       <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.0">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      </PackageReference>
     </ItemGroup>
 
 </Project>
