--- a/Assignment17/Assignment17.Ordering.API/Properties/launchSettings.json
+++ b/Assignment17/Assignment17.Ordering.API/Properties/launchSettings.json
@@ -4,6 +4,7 @@
     "anonymousAuthentication": true,
     "iisExpress": {
       "applicationUrl": "http://localhost:3348",
+      "launchUrl": "swagger",
       "sslPort": 44390
     }
   },
@@ -11,7 +12,8 @@
     "Assignment17.Ordering.API": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
+      "launchBrowser": false,
+      "launchUrl": "swagger",
       "applicationUrl": "https://localhost:7134;http://localhost:5228",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
@@ -19,7 +21,7 @@
     },
     "IIS Express": {
       "commandName": "IISExpress",
-      "launchBrowser": true,
+      "launchBrowser": false,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
