feat: Add xmind

--- a/Assignment17/Assignment17.Ordering.API/Assignment17.Ordering.API.csproj
+++ b/Assignment17/Assignment17.Ordering.API/Assignment17.Ordering.API.csproj
@@ -20,6 +20,7 @@
       <PackageReference Include="Masa.Contrib.Dispatcher.Events.FluentValidation" Version="0.7.0-preview.12" />
       <PackageReference Include="Masa.Contrib.Dispatcher.IntegrationEvents.Dapr" Version="0.7.0-preview.12" />
       <PackageReference Include="Masa.Contrib.Dispatcher.IntegrationEvents.EventLogs.EFCore" Version="0.7.0-preview.12" />
+      <PackageReference Include="Masa.Contrib.Exceptions" Version="0.7.0-preview.12" />
       <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.0">
         <PrivateAssets>all</PrivateAssets>
