chore: update library package version

--- a/Assignment18/Assignment.I18nDemo/appsettings.json
+++ b/Assignment18/Assignment.I18nDemo/appsettings.json
@@ -5,5 +5,18 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "DccOptions": {
+    "ManageServiceAddress": "{Replace-Your-DccManagerServiceHost}",
+    "RedisOptions": {
+      "Servers": [
+        {
+          "Host": "{Replace-Your-DccUseRedisHost}",
+          "Port": 6379
+        }
+      ],
+      "DefaultDatabase": 0,
+      "Password": ""
+    }
+  }
 }
